# plex-leon

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-binaries.yml  publish.yml  release.yml  run-tests-on-main.yml
scripts/: generate_episode_renamer_test_library.py  generate_merge_test_libraries.py  generate_prepare_test_library.py  generate_season_renamer_test_library.py  generate_test_libraries.py
scripts/generators/: __init__.py  base_test_library_generator.py  episode_renamer_tlg.py  generate_merge_test_libraries.py  generate_prepare_test_library.py  generate_season_renamer_test_library.py  merge_tlg.py  prepare_tlg.py  season_renamer_tlg.py
scripts/shared/: downloads.py  movies.py  tvshows.py
src/plex_leon/: __init__.py  cli.py  core.py  episode_renamer.py  main.py  migrate.py  prepare.py  season_renamer.py  utils.py
src/plex_leon/cli/: help.py  menu.py
src/plex_leon/shared/: __init__.py  find_episode_in_dirs.py  utility_discovery.py
src/plex_leon/utils/: base_utility.py  episode_renamer.py  migrate.py  prepare.py  season_renamer.py
src/scripts/: coverage_script.py  get_changes.py  get_current_version.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_and_core.py  test_core.py  test_episode_renamer.py  test_media_utils.py  test_migrate.py  test_season_renamer.py  test_utils.py
tests/integration/generators/: base_test_library_generator.py  episode_renamer_tlg.py  merge_tlg.py  migrate_tlg.py  prepare_tlg.py  season_renamer_tlg.py
tests/integration/shared/: __init__.py  (+3 more)
tests/utils/: __init__.py  make_files.py
(+21 files in other folders)
