[project]
name = "plex-leon"
version = "0.1.0"
description = ""
authors = [
    {name = "Felix Rizzolli",email = "felix.rizzolli@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "plex_leon", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
