[project]
name = "plex-leon"
version = "2.1.0"
description = ""
authors = [
    {name = "Felix Rizzolli",email = "felix.rizzolli@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.scripts]
plex-leon = "plex_leon.cli:main"

[tool.poetry]
packages = [{include = "plex_leon", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
