[project]
name = "plex-leon"
version = "3.0.1"
description = ""
authors = [
    {name = "Felix Rizzolli",email = "felix.rizzolli@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.11.0,<8.0.0)"
]

[project.scripts]
plex-leon = "plex_leon.main:main"
coverage = "scripts.coverage_script:main"

[tool.poetry]
packages = [{include = "plex_leon", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
